// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adminDeleteIssue emits delete issue on success 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "active": false,
        "alternatives": Array [
          Object {
            "id": "1",
            "text": "Blank",
          },
          Object {
            "id": "2",
            "text": "Yes",
          },
          Object {
            "id": "3",
            "text": "No",
          },
        ],
        "countingBlankVotes": false,
        "deleted": true,
        "description": "Description goes here",
        "id": "1",
        "meetingId": "1",
        "secret": false,
        "showOnlyWinner": false,
        "status": "VOTING_FINISHED",
        "voteDemand": "regular",
        "votes": Object {
          "1": 0,
          "2": 0,
          "3": 4,
        },
        "winner": "3",
      },
      "type": "CLOSE_ISSUE",
    },
  ],
  Array [
    "action",
    Object {
      "data": Object {
        "active": false,
        "alternatives": Array [
          Object {
            "id": "1",
            "text": "Blank",
          },
          Object {
            "id": "2",
            "text": "Yes",
          },
          Object {
            "id": "3",
            "text": "No",
          },
        ],
        "countingBlankVotes": false,
        "deleted": true,
        "description": "Description goes here",
        "id": "1",
        "meetingId": "1",
        "secret": false,
        "showOnlyWinner": false,
        "status": "VOTING_FINISHED",
        "voteDemand": "regular",
        "votes": Object {
          "1": 0,
          "2": 0,
          "3": 4,
        },
        "winner": "3",
      },
      "type": "DELETED_ISSUE",
    },
  ],
]
`;

exports[`adminDeleteIssue emits delete issue on success 2`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": "1",
        "status": "VOTING_FINISHED",
      },
      "type": "DISABLE_VOTING",
    },
  ],
  Array [
    "action",
    Object {
      "data": Object {
        "active": false,
        "alternatives": Array [
          Object {
            "id": "1",
            "text": "Blank",
          },
          Object {
            "id": "2",
            "text": "Yes",
          },
          Object {
            "id": "3",
            "text": "No",
          },
        ],
        "countingBlankVotes": false,
        "deleted": true,
        "description": "Description goes here",
        "id": "1",
        "meetingId": "1",
        "secret": false,
        "showOnlyWinner": false,
        "status": "VOTING_FINISHED",
        "voteDemand": "regular",
        "votes": Object {
          "1": 0,
          "2": 0,
          "3": 4,
        },
        "winner": "3",
      },
      "type": "CLOSE_ISSUE",
    },
  ],
  Array [
    "action",
    Object {
      "data": Object {
        "active": false,
        "alternatives": Array [
          Object {
            "id": "1",
            "text": "Blank",
          },
          Object {
            "id": "2",
            "text": "Yes",
          },
          Object {
            "id": "3",
            "text": "No",
          },
        ],
        "countingBlankVotes": false,
        "deleted": true,
        "description": "Description goes here",
        "id": "1",
        "meetingId": "1",
        "secret": false,
        "showOnlyWinner": false,
        "status": "VOTING_FINISHED",
        "voteDemand": "regular",
        "votes": Object {
          "1": 0,
          "2": 0,
          "3": 4,
        },
        "winner": "3",
      },
      "type": "DELETED_ISSUE",
    },
  ],
]
`;

exports[`adminDisableVoting emits disable voting on success 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": "1",
        "status": "VOTING_FINISHED",
      },
      "type": "DISABLE_VOTING",
    },
  ],
  Array [
    "action",
    Object {
      "data": Object {
        "active": true,
        "alternatives": Array [
          Object {
            "id": "1",
            "text": "Blank",
          },
          Object {
            "id": "2",
            "text": "Yes",
          },
          Object {
            "id": "3",
            "text": "No",
          },
        ],
        "countingBlankVotes": false,
        "description": "Description goes here",
        "id": "1",
        "meetingId": "1",
        "secret": false,
        "showOnlyWinner": false,
        "status": "VOTING_NOT_STARTED",
        "voteDemand": "regular",
        "votes": Object {
          "1": 0,
          "2": 0,
          "3": 4,
        },
        "winner": "3",
      },
      "type": "CLOSE_ISSUE",
    },
  ],
]
`;

exports[`adminDisableVoting emits disable voting on success 2`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": "1",
        "status": "VOTING_FINISHED",
      },
      "type": "DISABLE_VOTING",
    },
  ],
]
`;

exports[`adminEnableVoting emits enable voting on success 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": "1",
        "status": "VOTING_IN_PROGRESS",
      },
      "type": "ENABLE_VOTING",
    },
  ],
]
`;

exports[`adminEnableVoting emits enable voting on success 2`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": "1",
        "status": "VOTING_IN_PROGRESS",
      },
      "type": "ENABLE_VOTING",
    },
  ],
]
`;

exports[`closeIssue emits close issue action and disables voting 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "active": false,
        "alternatives": Array [
          Object {
            "id": "1",
            "text": "Blank",
          },
          Object {
            "id": "2",
            "text": "Yes",
          },
          Object {
            "id": "3",
            "text": "No",
          },
        ],
        "countingBlankVotes": false,
        "description": "Description goes here",
        "id": "1",
        "meetingId": "1",
        "secret": false,
        "showOnlyWinner": false,
        "status": "VOTING_FINISHED",
        "voteDemand": "regular",
        "votes": Object {
          "1": 0,
          "2": 0,
          "3": 4,
        },
        "winner": "3",
      },
      "type": "CLOSE_ISSUE",
    },
  ],
]
`;

exports[`closeIssue emits close issue action and disables voting 2`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": "1",
        "status": "VOTING_FINISHED",
      },
      "type": "DISABLE_VOTING",
    },
  ],
  Array [
    "action",
    Object {
      "data": Object {
        "active": false,
        "alternatives": Array [
          Object {
            "id": "1",
            "text": "Blank",
          },
          Object {
            "id": "2",
            "text": "Yes",
          },
          Object {
            "id": "3",
            "text": "No",
          },
        ],
        "countingBlankVotes": false,
        "description": "Description goes here",
        "id": "1",
        "meetingId": "1",
        "secret": false,
        "showOnlyWinner": false,
        "status": "VOTING_FINISHED",
        "voteDemand": "regular",
        "votes": Object {
          "1": 0,
          "2": 0,
          "3": 4,
        },
        "winner": "3",
      },
      "type": "CLOSE_ISSUE",
    },
  ],
]
`;

exports[`closeIssue emits close issue action and disables voting 3`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "active": false,
        "alternatives": Array [
          Object {
            "id": "1",
            "text": "Blank",
          },
          Object {
            "id": "2",
            "text": "Yes",
          },
          Object {
            "id": "3",
            "text": "No",
          },
        ],
        "countingBlankVotes": false,
        "description": "Description goes here",
        "id": "1",
        "meetingId": "1",
        "secret": false,
        "showOnlyWinner": false,
        "status": "VOTING_FINISHED",
        "voteDemand": "regular",
        "votes": Object {
          "1": 0,
          "2": 0,
          "3": 4,
        },
        "winner": "3",
      },
      "type": "CLOSE_ISSUE",
    },
  ],
]
`;

exports[`closeIssue emits error when it fails 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Stenging av sak feilet",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`closeIssue emits winner when issue only shows winner 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "active": false,
        "alternatives": Array [
          Object {
            "id": "1",
            "text": "Blank",
          },
          Object {
            "id": "2",
            "text": "Yes",
          },
          Object {
            "id": "3",
            "text": "No",
          },
        ],
        "countingBlankVotes": false,
        "description": "Description goes here",
        "id": "1",
        "meetingId": "1",
        "secret": false,
        "showOnlyWinner": true,
        "status": "VOTING_FINISHED",
        "voteDemand": "regular",
        "votes": Object {
          "1": 0,
          "2": 0,
          "3": 4,
        },
        "winner": "3",
      },
      "type": "CLOSE_ISSUE",
    },
  ],
]
`;

exports[`closeIssue emits winner when issue only shows winner 2`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": "1",
        "status": "VOTING_FINISHED",
      },
      "type": "DISABLE_VOTING",
    },
  ],
  Array [
    "action",
    Object {
      "data": Object {
        "active": false,
        "alternatives": Array [
          Object {
            "id": "1",
            "text": "Blank",
          },
          Object {
            "id": "2",
            "text": "Yes",
          },
          Object {
            "id": "3",
            "text": "No",
          },
        ],
        "countingBlankVotes": false,
        "description": "Description goes here",
        "id": "1",
        "meetingId": "1",
        "secret": false,
        "showOnlyWinner": true,
        "status": "VOTING_FINISHED",
        "voteDemand": "regular",
        "votes": Object {},
        "winner": "3",
      },
      "type": "CLOSE_ISSUE",
    },
  ],
]
`;

exports[`closeIssue emits winner when issue only shows winner 3`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "active": false,
        "alternatives": Array [
          Object {
            "id": "1",
            "text": "Blank",
          },
          Object {
            "id": "2",
            "text": "Yes",
          },
          Object {
            "id": "3",
            "text": "No",
          },
        ],
        "countingBlankVotes": false,
        "description": "Description goes here",
        "id": "1",
        "meetingId": "1",
        "secret": false,
        "showOnlyWinner": true,
        "status": "VOTING_FINISHED",
        "voteDemand": "regular",
        "votes": Object {
          "1": 0,
          "2": 0,
          "3": 4,
        },
        "winner": "3",
      },
      "type": "CLOSE_ISSUE",
    },
  ],
]
`;

exports[`createIssue emits OPEN_ISSUE action creates issue 1`] = `
Array [
  Array [
    "action",
    Object {
      "action": "open",
      "data": Object {
        "active": true,
        "alternatives": Array [
          Object {
            "id": "1",
            "text": "Blank",
          },
          Object {
            "id": "2",
            "text": "Yes",
          },
          Object {
            "id": "3",
            "text": "No",
          },
        ],
        "countingBlankVotes": false,
        "description": "Description goes here",
        "id": "1",
        "meetingId": "1",
        "secret": false,
        "showOnlyWinner": false,
        "status": "VOTING_NOT_STARTED",
        "voteDemand": "regular",
      },
      "type": "OPEN_ISSUE",
    },
  ],
]
`;

exports[`createIssue emits OPEN_ISSUE action creates issue 2`] = `
Array [
  Array [
    "action",
    Object {
      "action": "open",
      "data": Object {
        "active": true,
        "alternatives": Array [
          Object {
            "id": "1",
            "text": "Blank",
          },
          Object {
            "id": "2",
            "text": "Yes",
          },
          Object {
            "id": "3",
            "text": "No",
          },
        ],
        "countingBlankVotes": false,
        "description": "Description goes here",
        "id": "1",
        "meetingId": "1",
        "secret": false,
        "showOnlyWinner": false,
        "status": "VOTING_NOT_STARTED",
        "voteDemand": "regular",
      },
      "type": "OPEN_ISSUE",
    },
  ],
]
`;

exports[`createIssue emits an error when it fails 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Opprettelse av sak feilet",
      },
      "type": "ERROR",
    },
  ],
]
`;
